# bus_notify

./: Cargo.toml  Dockerfile  README.md
src/: bus.rs  main.rs  slack.rs
src/core/: service.rs
src/utils/: http_client.rs
