[package]
name = "bus_notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0"
chrono = "0.4"
chrono-tz = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
env_logger = "0.10.0"
log = "0.4.17"
